# ai-editor-demo

./: .gitignore  README.md
backend/: Cargo.toml  compose.yaml  design.md  justfile  test_intelligence.sh
backend/core/: Cargo.toml
backend/core/src/: intelligence.rs  lib.rs  llm.rs  model.rs
backend/core/src/editor/: mod.rs  read.rs  write.rs
backend/core/src/helper_utils/: xml.rs
backend/core/src/intelligence/: brain.rs  types.rs
backend/core/src/intelligence/agent/: mod.rs  refiner.rs  researcher.rs
backend/core/src/llm/: agent.rs  types.rs
backend/core/src/llm/tools/: backseater.rs  emoji_replacer.rs  extender.rs  linter.rs  mod.rs  refiner.rs  researcher.rs
frontend/editor/: .prettierrc  README.md  package.json  tailwind.config.ts  tsconfig.json
frontend/editor/.cursor/: doc.mdc
frontend/editor/src/app/: globals.css  layout.tsx  page.tsx
frontend/editor/src/app/api/generate/: route.ts
frontend/editor/src/app/api/pulse/: route.ts
frontend/editor/src/components/: Layout.tsx  ai-status-bubble.tsx  editor.tsx  pulse-sidebar.tsx  slash-command.tsx
frontend/editor/src/components/base/: Button.tsx  Command.tsx  ScrollArea.tsx  Separator.tsx  TextButtons.tsx  index.ts
frontend/editor/src/components/generative/: ai-completion-command.tsx  ai-selector-commands.tsx  ai-selector.tsx  generative-menu-switch.tsx
frontend/editor/src/components/icons/: crazy-spinner.tsx  magic.tsx
frontend/editor/src/components/layout/: header.tsx  main-layout.tsx
frontend/editor/src/components/selectors/: text-buttons.tsx
frontend/editor/src/components/ui/: command.tsx  scroll-area.tsx  separator.tsx
frontend/editor/src/components/ui/icons/: crazy-spinner.tsx  magic.tsx
frontend/editor/src/constants/: env.ts
frontend/editor/src/hooks/: useAIGeneration.ts  useAsyncGuard.ts  useAutoAITrigger.ts  useCollaboration.ts  useEditorSync.ts  usePulse.ts  useYjsCollaboration.ts  useYjsPersistence.ts  useYjsPlugins.ts
frontend/editor/src/lib/: aiHighlightDecoration.ts  extensions.ts  image-upload.ts  yjsExtension.ts
frontend/editor/src/services/: ai-generation.ts  ai.ts  backend.ts  index.ts  pulse.ts
frontend/editor/src/types/: ai.ts
