[workspace]
members = ["core", "bin/backend"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Brian Huang <brian861105@gmail.com>"]
repository = "https://github.com/aetheras-io/backend"
edition = "2024"
publish = false

[workspace.dependencies]
atb = { git = "https://github.com/aetheras-io/atb-rs", tag = "v1.4.9", features = [
  "fixtures",
] }
atb-types = { git = "https://github.com/aetheras-io/atb-rs", tag = "v1.4.9", features = [
  "jwt",
] }
atb-serde-ext = { git = "https://github.com/aetheras-io/atb-rs", tag = "v1.4.9" }
atb-tokio-ext = { git = "https://github.com/aetheras-io/atb-rs", tag = "v1.4.9" }
atb-graphql-ext = { git = "https://github.com/aetheras-io/atb-rs", tag = "v1.4.9" }
atb-temporal-ext = { git = "https://github.com/aetheras-io/atb-rs", tag = "v1.4.9" }

strum = { version = "0.27", features = ["derive"] }
num_enum = { version = "0.7.5" }
tracing = { version = "0.1" }
anyhow = { version = "1" }
thiserror = { version = "2" }
serde = { version = "1" }
serde_json = { version = "1" }
cfg-if = { version = "1" }
once_cell = { version = "1" }
rand = { version = "0.9" }
base64 = { version = "0.22" }
reqwest = { version = "0.12", default-features = false, features = [
  "socks",
  "stream",
  "json",
  "rustls-tls",
] }
tokio = { version = "1", features = [
  "signal",
  "rt-multi-thread",
  "net",
  "time",
  "macros",
  "sync",
] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "bigdecimal",
  "rust_decimal",
  "bit-vec",
  "any",
  "migrate",
  "ipnetwork",
] }
ipnetwork = "0.21.1"
futures = "0.3.31"
futures-channel = { version = "0.3" }
futures-util = "0.3"
regex = { version = "1.11.1" }
rust_decimal = { version = "1.37.2", features = [
  "serde-with-arbitrary-precision",
] }
enum-iterator = "2.3"
yrs = "0.18"
tokio-stream = "0.1"